deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-echo-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: my-echo-pod
  template:
    metadata:
      labels:
        app: my-echo-pod
    spec:
      containers:
        - name: echo-container
          image: registry.cluster.wik.cloud/public/echo
          ports: 
            - containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
