pod.yaml
# pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-echo-pod
spec:
  containers:
    - name: echo-container
      image: registry.cluster.wik.cloud/public/echo
